--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,8 +3,11 @@ name = "backend"
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
+    "boto3>=1.42.19",
     "fastapi>=0.128.0",
+    "mangum>=0.20.0",
     "openai>=2.14.0",
+    "pypdf>=6.5.0",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.21",
     "uvicorn>=0.40.0",
